Add tests for different transports

--- a/tests/integration/targets/podman_image/tasks/main.yml
+++ b/tests/integration/targets/podman_image/tasks/main.yml
@@ -29,6 +29,25 @@
       command: podman image ls
       register: images
 
+    - name: Remove existing image archive
+      ansible.builtin.file:
+        path: 'alpine.tar'
+        state: absent
+
+    - name: Archive image to disk using docker-archive transport
+      containers.podman.podman_image:
+        name: 'docker.io/library/alpine'
+        #tag: '2'
+        push: true
+        push_args:
+          dest: 'alpine.tar'
+          transport: 'docker-archive'
+
+    - name: Stat the docker-archive tar file
+      stat:
+        path: 'alpine.tar'
+      register: alpine_docker_archive
+
     - name: Ensure image were pulled properly
       assert:
         that:
@@ -40,6 +59,48 @@
           - pull5 is not changed
           - "'alpine-sh' in images.stdout"
           - "'library/alpine' in images.stdout"
+          - alpine_docker_archive.stat.exists
+
+    - name: Push to a tarball in the docker-archive format
+      containers.podman.podman_image:
+        name: 'docker.io/library/alpine'
+        push: true
+        push_args:
+          dest: '/tmp/alpine.tar'
+          transport: 'docker-archive'
+
+    - name: Stat the docker-archive tar file
+      stat:
+        path: '/tmp/alpine.tar'
+      register: alpine_docker_archive
+
+    - name: Cleanup docker-archive transport test file
+      ansible.builtin.file:
+        path: '/tmp/alpine.tar'
+        state: absent
+
+    - name: Remove local archive testing directory (pre-test)
+      ansible.builtin.file:
+        path: '/tmp/alpine'
+        state: absent
+
+    - name: Push to a local directory
+      containers.podman.podman_image:
+        name: 'docker.io/library/alpine'
+        push: true
+        push_args:
+          dest: '/tmp/alpine'
+          transport: 'dir'
+
+    - name: Remove local archive testing directory (post-test)
+      ansible.builtin.file:
+        path: '/tmp/alpine'
+        state: absent 
+
+    - name: Ensure archive transports are working correctly
+      assert:
+        that:
+          - alpine_docker_archive.stat.exists
 
     - name: add another tag (repository url)
       command:
