Add .service extension to systemd files

--- a/tests/integration/targets/podman_pod/tasks/main.yml
+++ b/tests/integration/targets/podman_pod/tasks/main.yml
@@ -666,7 +666,7 @@
         name: pod2
         state: started
         generate_systemd:
-          file: /tmp/dir1
+          path: /tmp/dir1
           restart_policy: always
           time: 120
           no_header: true
