--- a/tests/integration/targets/podman_container_idempotency/tasks/root-podman-network.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/root-podman-network.yml
@@ -54,6 +54,9 @@
     - include_tasks: idem_networks.yml
       loop: "{{ testdata }}"
 
+    - include_tasks: idem_network_aliases.yml
+      loop: "{{ testdata }}"
+
   always:
 
     - name: Delete all pods leftovers from tests
