Fix copy-pasta in test name

--- a/tests/integration/targets/podman_container_idempotency/tasks/main.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/main.yml
@@ -42,5 +42,5 @@
     apply:
       become: true
 
-- name: Test idempotency for root network containers
+- name: Test idempotency for rootless network containers
   include_tasks: rootless-podman-network.yml
