--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_network_aliases.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_network_aliases.yml
@@ -3,7 +3,7 @@
     name: netcontainer
     state: absent
 
-- name: Run container with {{ item.first_net }}
+- name: Run container with {{ item.first_net }} and two aliases
   containers.podman.podman_container:
     name: netcontainer
     image: "{{ idem_image }}"
@@ -14,7 +14,7 @@
       - netcontainer-alias-a
       - netcontainer-alias-b
 
-- name: Run container again with {{ item.first_net }}
+- name: Run container again with {{ item.first_net }} and same two aliases
   containers.podman.podman_container:
     name: netcontainer
     image: "{{ idem_image }}"
@@ -31,7 +31,7 @@
     that:
       - info is not changed
 
-- name: Run changed container with {{ item.next_net }}
+- name: Run changed container with {{ item.first_net }} and three aliases
   containers.podman.podman_container:
     name: netcontainer
     image: "{{ idem_image }}"
