--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_network_aliases.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_network_aliases.yml
@@ -3,41 +3,41 @@
     name: netcontainer
     state: absent
 
-- name: Run container with {{ item.first_net }} and two aliases
+- name: Run container with testnet and two aliases
   containers.podman.podman_container:
     name: netcontainer
     image: "{{ idem_image }}"
     command: 1h
     state: started
-    network: "{{ item.first_net }}"
+    network: testnet
     network_aliases:
       - netcontainer-alias-a
       - netcontainer-alias-b
 
-- name: Run container again with {{ item.first_net }} and same two aliases
+- name: Run container again with testnet and same two aliases
   containers.podman.podman_container:
     name: netcontainer
     image: "{{ idem_image }}"
     command: 1h
     state: present
-    network: "{{ item.first_net }}"
+    network: testnet
     network_aliases:
       - netcontainer-alias-a
       - netcontainer-alias-b
   register: info
 
-- name: Check info for 2 runs of {{ item.first_net }}
+- name: Check info for 2 runs of testnet
   assert:
     that:
       - info is not changed
 
-- name: Run changed container with {{ item.first_net }} and three aliases
+- name: Run changed container with testnet and three aliases
   containers.podman.podman_container:
     name: netcontainer
     image: "{{ idem_image }}"
     command: 1h
     state: present
-    network: "{{ item.first_net }}"
+    network: testnet
     network_aliases:
       - netcontainer-alias-a
       - netcontainer-alias-b
