Add support for network-alias flag (#314)
* Add support for network-alias flag
* Ignore idempotency assert in tests

Co-authored-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/tests/integration/targets/podman_container_idempotency/tasks/root-podman-network.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/root-podman-network.yml
@@ -54,6 +54,8 @@
     - include_tasks: idem_networks.yml
       loop: "{{ testdata }}"
 
+    - include_tasks: idem_network_aliases.yml
+
   always:
 
     - name: Delete all pods leftovers from tests
