--- a/tests/integration/targets/podman_pod/tasks/root-pod.yml
+++ b/tests/integration/targets/podman_pod/tasks/root-pod.yml
@@ -115,9 +115,11 @@
           - "4444:4444/tcp"
           - "8888:19191/udp"
           - "127.0.0.1:7671:7676/udp"
+          - "10.126.0.1:7671:7676/udp"
           - "127.0.0.1:13122:8871/tcp"
           - "127.0.0.1:43423:8872"
           - "[::1]:8743:8745"
+          - "[fd42::1]:8743:8745"
       register: pod8_info
 
     - name: Check info
@@ -133,9 +135,11 @@
           - "4444:4444/tcp"
           - "8888:19191/udp"
           - "127.0.0.1:7671:7676/udp"
+          - "10.126.0.1:7671:7676/udp"
           - "127.0.0.1:13122:8871/tcp"
           - "127.0.0.1:43423:8872"
           - "[::1]:8743:8745"
+          - "[fd42::1]:8743:8745"
       register: pod9_info
 
     - name: Check info
