Strip slashes from volumes
Fix #372

Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_volumes.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_volumes.yml
@@ -47,7 +47,7 @@
     name: idempotency
     state: present
     volumes:
-      - /opt:/somedir
+      - /opt:/somedir/
     command: 1h
   register: test4
 
@@ -60,7 +60,7 @@
     name: idempotency
     state: present
     volumes:
-      - /opt/://somedir
+      - /opt/://somedir/
     command: 1h
   register: test5
 
