--- a/.github/workflows/collection-continuous-integration.yml
+++ b/.github/workflows/collection-continuous-integration.yml
@@ -69,6 +69,15 @@ jobs:
             runner-python-version: 2.7
             ansible-version: ansible<2.10
             python-version: 2.7
+          - runner-os: ubuntu-22.04
+            runner-python-version: '3.10'
+            ansible-version: git+https://github.com/ansible/ansible.git@devel
+            python-version: '3.10'
+        exclude:
+          - runner-os: ubuntu-22.04
+            runner-python-version: 3.8
+            ansible-version: git+https://github.com/ansible/ansible.git@devel
+            python-version: 3.8
 
     steps:
       - name: Set up Python ${{ matrix.runner-python-version }}
