--- a/.github/workflows/connections_tests.yml
+++ b/.github/workflows/connections_tests.yml
@@ -85,8 +85,8 @@ jobs:
           #- ubuntu-16.04
           #- macos-latest
         python-version:
-          - 3.8
-          #- 3.9
+          #- 3.8
+          - 3.9
           #- 3.6
           #- 3.5
           #- 2.7
@@ -133,9 +133,8 @@ jobs:
         run: |
           export PATH=~/.local/bin:$PATH
 
-          if [[ '${{ matrix.ansible-version }}'  == 'git+https://github.com/ansible/ansible.git@devel' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          elif [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
+          export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
+          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
             export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
           fi
 
@@ -176,8 +175,8 @@ jobs:
           #- ubuntu-16.04
           #- macos-latest
         python-version:
-          - 3.8
-          #- 3.9
+          #- 3.8
+          - 3.9
           #- 3.6
           #- 3.5
           #- 2.7
@@ -224,9 +223,8 @@ jobs:
         run: |
           export PATH=~/.local/bin:$PATH
 
-          if [[ '${{ matrix.ansible-version }}'  == 'git+https://github.com/ansible/ansible.git@devel' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          elif [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
+          export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
+          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
             export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
           fi
 
