--- a/.github/workflows/podman_container.yml
+++ b/.github/workflows/podman_container.yml
@@ -94,9 +94,8 @@ jobs:
         run: |
           export PATH=~/.local/bin:$PATH
 
-          if [[ '${{ matrix.ansible-version }}'  == 'git+https://github.com/ansible/ansible.git@devel' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          elif [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
+          export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
+          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
             export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
           fi
 
@@ -177,9 +176,8 @@ jobs:
           export PATH=~/.local/bin:$PATH
           export ANSIBLE_COLLECTIONS_PATHS=~/.local/share/ansible/collections
 
-          if [[ '${{ matrix.ansible-version }}'  == 'git+https://github.com/ansible/ansible.git@devel' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          elif [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
+          export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
+          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
             export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
           fi
 
