--- a/.github/workflows/podman_container_idem.yml
+++ b/.github/workflows/podman_container_idem.yml
@@ -91,9 +91,8 @@ jobs:
           command -v ansible
           ansible --version
 
-          if [[ '${{ matrix.ansible-version }}'  == 'git+https://github.com/ansible/ansible.git@devel' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          elif [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
+          export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
+          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
             export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
           fi
 
@@ -113,9 +112,8 @@ jobs:
       - name: Run idempotency tests for podman container
         run: |
           export PATH=~/.local/bin:$PATH
-          if [[ '${{ matrix.ansible-version }}'  == 'git+https://github.com/ansible/ansible.git@devel' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          elif [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
+          export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
+          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
             export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
           fi
           TEST2RUN=podman_container_idempotency ./ci/run_containers_tests.sh
