--- a/.github/workflows/podman_play.yml
+++ b/.github/workflows/podman_play.yml
@@ -87,9 +87,8 @@ jobs:
         run: |
           export PATH=~/.local/bin:$PATH
 
-          if [[ '${{ matrix.ansible-version }}'  == 'git+https://github.com/ansible/ansible.git@devel' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          elif [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
+          export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
+          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
             export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
           fi
 
